[package]
name = "card-vault"
version = "0.1.0"
authors = ["Andrew Dobrich <andrew.dobrich@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"

dirs = "3.0"

serde = { version = "1.0", features = [ "derive" ] }

rusqlite = { version = "0.24.2", features = [ "bundled" ] }

gtk = "^0.9.0"
relm = "^0.21.0"
relm-derive = "^0.21.0"
